--- a/indexPhoto.html
+++ b/indexPhoto.html
@@ -204,7 +204,7 @@
             <div class="carousel-item"><img src="img/other8.jpg"></div>
             <div class="carousel-item"><img src="img/other9.jpg"></div>
             <div class="carousel-item"><img src="img/other10.jpg"></div>
-            <div class="carousel-item"><img src="img/other12.jpg"></div>
+            <div class="carousel-item"><img src="img/other12.JPG"></div>
           </div>
         </div>
       </div>
