--- a/indexPhotoGrid.html
+++ b/indexPhotoGrid.html
@@ -129,7 +129,7 @@
           <div class="image-grid"><img src="img/other9.jpg"></div>
           <div class="image-grid"><img src="img/other10.jpg"></div>
           <div class="image-grid"><img src="img/other11.jpg"></div>
-          <div class="image-grid"><img src="img/other12.jpg"></div>
+          <div class="image-grid"><img src="img/other12.JPG"></div>
         </div>
 
       </div>
