--- a/indexPhone.html
+++ b/indexPhone.html
@@ -231,8 +231,8 @@
         </div>
 
         <div class="video-gallery">
-          <div class="thumb-gallery" id="thumb-one"><img src="img/thumbnail11.png">Fish</div>
-          <div class="thumb-gallery" id="thumb-two"><img src="img/thumbnail22.png">FireSky</div>
+          <div class="thumb-gallery" id="thumb-one"><img src="img/thumbnail11.PNG">Fish</div>
+          <div class="thumb-gallery" id="thumb-two"><img src="img/thumbnail22.PNG">FireSky</div>
         </div>
 
         <div class="backBtn-vid">
