--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>A multiproject virtual phone app</p>
         <a href="indexPhone.html" class="btn">Go to project</a>
         <hr>
-        <a href="" class="btn">View repository</a>
+        <a href="https://github.com/GeorgeSotiriou/George-Sotiriou-Portfolio-Javascript" class="btn">View repository</a>
       </div>
 
       <div class="gallery">
@@ -41,7 +41,7 @@
         <p>A responsive image gallery website consisted of two different versions, bootstrap-carousel and grid layout.</p>
         <a href="indexPhoto.html" class="btn">Go to project</a>
         <hr>
-        <a href="" class="btn">View repository</a>
+        <a href="https://github.com/GeorgeSotiriou/George-Sotiriou-Portfolio-Javascript" class="btn">View repository</a>
       </div>
 
 
