--- a/indexPhone.html
+++ b/indexPhone.html
@@ -17,6 +17,7 @@
 <!-- main div container -->
 
   <div class="one">
+    <a href="index.html" id="btn-home">Home</a>
 
     <div class="phone">
       
