--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="phone">
         <h2>Virtual Phone App</h2>
-        <p>A multiproject virtual phone app</p>
+        <p>A multiproject virtual phone app, for computer.</p>
         <a href="indexPhone.html" class="btn">Go to project</a>
         <hr>
         <a href="https://github.com/GeorgeSotiriou/George-Sotiriou-Portfolio-Javascript" class="btn">View repository</a>
